--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap'); */
 
 /* * - targets all elemenst <p><div><h1> etc */
 * {
@@ -6,4 +6,58 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "League Spartan", sans-serif;
+    text-decoration: none;
+}
+
+
+body {
+    width: 100%;
+    height: 100vh;
+    overflow-x: hidden;
+    background: rgb(255, 243, 220);
+    color: rgb(90, 76, 51);
+}
+
+header {
+    margin-top: 20px;
+    position: fixed;
+    top: 50px;
+    left: 0px;
+    width: 100%;
+    padding: 20px 50px;
+    background-color: aqua;
+    filter: drop-shadow(10px);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
+}
+
+
+.logo {
+    font-size: 3rem;
+    color: #b74b4b;
+    font-weight: 600;
+    cursor: pointer;
+    transition: 0.5s ease;
+}
+
+nav a {
+    font-size: 1.8rem;
+    color: white;
+    margin-left: 4rem;
+    font-weight: 400;
+    transition: 0.3s ease;
+    border-bottom: 3px solid transparent;
+    background-color: #b74b4b;
+}
+
+nav.a:hover,
+nav.a.active {
+    color: #b74b4b;
+    border-bottom: 3px solid transparent;
+}
+
+@media(max-width:995px) {
+    
 }
