--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,35 @@
 /* @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap');
 
 /* * - targets all elemenst <p><div><h1> etc */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "League Spartan", sans-serif;
     text-decoration: none;
+    font-family: "League Spartan", sans-serif;
 }
 
+html{
+    font-size: 62.5%;
+}
 
 body {
     width: 100%;
     height: 100vh;
-    overflow-x: hidden;
-    background: rgb(255, 243, 220);
-    color: rgb(90, 76, 51);
+    overflow-x: hidden; /*scrolling*/
+
 }
 
 header {
     margin-top: 20px;
     position: fixed;
-    top: 50px;
-    left: 0px;
+    top: 0;
+    left: 0;
     width: 100%;
     padding: 20px 50px;
-    background-color: aqua;
+    /* background-color: rgba(0, 255, 255, 0.15); */
+
     filter: drop-shadow(10px);
     display: flex;
     justify-content: space-between;
@@ -33,31 +37,314 @@ header {
     z-index: 100;
 }
 
+/* header nav {
+    background-color: yellow;
+} */
 
 .logo {
     font-size: 3rem;
-    color: #b74b4b;
+    color: rgb(227, 11, 126);
     font-weight: 600;
     cursor: pointer;
     transition: 0.5s ease;
 }
 
+.logo:hover {
+    transform: scale(1.1);
+}
+
 nav a {
     font-size: 1.8rem;
-    color: white;
+    color: rgb(0, 0, 0);
     margin-left: 4rem;
     font-weight: 400;
     transition: 0.3s ease;
     border-bottom: 3px solid transparent;
-    background-color: #b74b4b;
+    /* background-color: #0d10e5; */
 }
 
-nav.a:hover,
-nav.a.active {
-    color: #b74b4b;
-    border-bottom: 3px solid transparent;
+nav a:hover,
+nav a.active {
+    color: rgb(227, 11, 126);
+    border-bottom: 3px solid rgb(227, 11, 126);
+    border-radius: 7%;
 }
 
+
+
+
+
+
+
+/* @media starts a conditional CSS block - like an 'if' statement */
+/* When the screen-size is 995px or LESS.            apply these styles */
 @media(max-width:995px) {
-    
+    nav {
+        position: absolute;
+        display: none;
+        top: 0;
+        right: 0;
+        width: 40%;
+        border-left: 3px solid #b74b4b;
+        border-bottom: 3px solid #b74b4b;
+        border-bottom-left-radius: 2rem;
+
+        padding: 1rem solid;
+        background-color: rgb(81, 226, 84);
+        border-top: 1rem solid rgba(0, 0, 0, 0.6);
+    }
+
+    nav.active {
+        display: block;
+    }
+
+    nav a {
+        display: block;
+        font-size: 2rem;
+        margin: 3rem 0;
+/*        background-color: #b74b4b; */
+    }
+
+    nav a:hover,
+    nav a.active {
+        padding: 1rem;
+        border-radius: 0.5rem;
+        border-bottom: 0.5rem solid #b74b4b;
+    }
 }
+
+
+
+
+
+
+
+section {
+    min-height: 100vh;
+    padding: 5rem 9% 5rem;
+    /* background-color: rgb(8, 203, 252); */
+}
+
+.home {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8rem;
+    background-color: white;
+}
+
+
+.home .home-content {
+    /* background-color: rgba(255, 231, 235, 0.5); */
+}
+
+
+.home .home-content h1{
+    font-size: 6rem;
+    line-height: 1.3;
+    /* background-color: rgba(255, 231, 235, 0.5); */
+}
+
+
+span{
+    color: rgb(227, 11, 126);
+}
+
+
+.home-content h3 {
+    font-size: 4rem;
+    margin-bottom: 1rem;
+    font-weight: 700;
+}
+
+.home-content p{
+    font-size: 1.6rem;
+}
+
+.home-img{
+    border-radius: 50%;
+    /* background-color: #b74b4b; */
+}
+
+.home-img img{
+    position: relative;
+    width: 32vw;
+    
+    border-radius: 50%;
+    box-shadow: 0 0 50px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    transition: 0.2s linear;
+}
+
+
+.home-img img:hover{
+    font-size: 1.8rem;
+    font-weight: 500;
+    filter: invert(50);
+}
+
+
+.social-icon {
+    /* background-color: rgba(255, 231, 235, 0.5); */
+}
+
+
+.social-icon a{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 3rem;
+    height: 3rem;
+
+    background-color: transparent;
+    border: 0.17rem solid #000000;
+    
+    font-size: 1.5rem;
+    border-radius: 50%;
+    margin: 1rem 1.5rem 1rem 0rem;
+    transition: 0.3s ease;
+    color: rgb(0, 0, 0);
+}
+
+.social-icon a:hover{
+    background-color: #000000;
+    color: rgb(255, 255, 255);
+
+    transform: scale(1.3) translateY(-5px);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.321);
+    border: none;
+}
+
+
+.btn{
+    display: inline-block;
+    padding: 1rem 3rem;
+    margin-top: 1rem;
+    font-size: 2rem;
+    font-weight: 800;
+
+    background-color: rgb(255, 255, 255);
+    color: black;
+    border: 1.17px solid black;
+    border-radius: 0.5rem;
+
+    transition: 0.3s ease;
+    cursor: pointer;
+}
+
+.btn:hover{
+    transform: scaleX(1.1);
+    background-color: black;
+    color: white;
+    /* box-shadow: 0 0 15px greenyellow; */
+}
+
+
+.typing-text{
+    font-size: 34px;
+    font-weight: 600;
+    min-width: 280px;
+}
+
+.typing-text span{
+    position: relative;
+}
+
+.typing-text span::before{
+    content: "software Developer";
+    color: rgb(227, 11, 126);
+    animation: words 20s infinite;
+}
+
+.typing-text span::after{
+    content: "";
+    background-color: rgba(227, 11, 126, 0.15);
+    position: absolute;
+    width: calc(100% + 8px);
+    height: 100%;
+    border-left: 3px solid rgb(0, 0, 0);
+    right: -8;
+    animation: cursor 0.6s infinite;
+}
+
+
+@keyframes cursor {
+    to{
+        border-left: 3px solid rgb(0, 251, 255);
+        /* border-right: 5px solid; */
+    }
+}
+
+@keyframes words{
+    0%, 20%{
+        content: "";
+    }
+    21%, 40%{
+        content: "Designer";
+    }
+    41%, 60%{
+        content: "Artist";
+    }
+    61%, 80%{
+        content: "Programmer";
+    }
+    81%, 100%{
+        content: "Creator";
+    }
+}
+
+
+@media (max-width: 1000px){
+    .home{
+        gap: 4rem;
+        background-color: pink;
+    }
+}
+
+@media (max-width: 995px){
+    .home{
+        flex-direction: column;
+        margin: 5rem 4rem;
+    }
+
+    .home .home-content h3{
+        font-size: 2.5rem;
+    }
+
+    .home-content h1{
+        font-size: 5rem;
+    }
+
+    .home-img img{
+        width: 70vw;
+        margin-top: 4rem;
+    }
+}
+/* stopped 15:28 */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* questions :
+Mozilla 
+    display
+    units of measurement (px, vw, vh, rem etc)
+    pseudo : (classes) & :: (elements)
+    animation: property & possible values
+    value - calc(100%);
+    position: property & possible values
+    var()
+*/
